--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Embeddings Viewer Web Application"
-    />
-    <title>Embeddings Viewer</title>
+    <meta name="description" content="Satellite Embeddings Explorer" />
+    
+    <!-- Only need Mapbox CSS, React handles the JS -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css' rel='stylesheet' />
+    
+    <title>🛰️ Satellite Embeddings Explorer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- React will inject everything here -->
   </body>
 </html>
